added code and instructions for class-repo-as-dependency approach